fix contextual menu being too wide

--- a/app/styles/components/_track.scss
+++ b/app/styles/components/_track.scss
@@ -84,6 +84,8 @@
 .Track-contextual {
 	margin-left: auto;
 	margin-bottom: auto;
+	position: relative;
+	overflow: hidden;
 
 	.Btn--toggle {
 		pointer-events: none;
